<resources>
    <string name="state" translatable="false">com.example.rpg_character</string>
    <string name="dice">Dice</string>
    <string name="sleep">Rest</string>
    <string name="selectpg">Select a character</string>
    <string name="export">Export character</string>
    <string name="importchar">Import character</string>
    <string name="charselect">Select character</string>
    <string name="lv" translatable="false">lv</string>
    <string name="bonus_comp">Prof bonus.</string>
    <string name="inspiration">inspiration</string>
    <string name="str">STR</string>
    <string name="dex">DEX</string>
    <string name="inte">INT</string>
    <string name="insertmaxslots">Enter max slots</string>
    <string name="wisdom">WIS</string>
    <string name="charisma">CHA</string>
    <string name="constitution">CON</string>
    <string name="armorclass">Armor class</string>
    <string name="hitpoints">Hit points</string>
    <string name="maxhp">Max HP</string>
    <string name="abilitieslist">Abilities</string>
    <string name="language">Languages</string>
    <string name="profs">Proficiencies</string>
    <string name="classfeat">Class Features</string>
    <string name="rasefeat">Racial Traits</string>
    <string name="savethrowtitle">Saving throws</string>
    <string name="skilltitle">Skills</string>
    <string name="STRskillathletics">Athletics</string>
    <string name="DEXskillacrobatics">Acrobatics</string>
    <string name="DEXskillstealth">Stealth</string>
    <string name="DEXskillands">Sleight of Hand</string>
    <string name="INTskillinvestigation">Investigation</string>
    <string name="INTskillarcana">Arcana</string>
    <string name="INTskillhistory">History</string>
    <string name="INTskillReligion">Religion</string>
    <string name="INTskillnature">Nature</string>
    <string name="WISskillsirvival">Survival</string>
    <string name="WISskillmedicine">Medicine</string>
    <string name="WISskillperception">Perception</string>
    <string name="WISskillInsight">Insight</string>
    <string name="WISskillanimalhandling">Animal handling</string>
    <string name="CHAskillintimidation">Intimidation</string>
    <string name="CHAskillDeception">Deception</string>
    <string name="CHAskillPerfomance">Perfomance</string>
    <string name="CHAskillPersuasion">Persuasion</string>
    <string name="attacksandspellstitle">Attacks and spells</string>
    <string name="meleeattack">Melee attacks</string>
    <string name="rangedattack">Ranged attacks</string>
    <string name="spellattack">Spells</string>
    <string name="attackaction">Attack</string>
    <string name="addattack">Add</string>
    <string name="inventory">Inventory</string>
    <string name="platinum">Platinum</string>
    <string name="gold">Gold</string>
    <string name="silver">Silver</string>
    <string name="copper">Copper</string>
    <string name="backgroundandnodes">Character background and nodes</string>
    <string name="dicechoise">Chose a dice</string>
    <string name="natureldice">Natural %s!</string>
    <string name="Head">Heads</string>
    <string name="Tails">Tails</string>
    <string name="howmanydice">How many D%1$ds to roll?</string>
    <string name="roll">Roll</string>
    <string name="numbererror">Invalid number!</string>
    <string name="remove">Remove</string>
    <string name="newweapon">New weapon</string>
    <string name="meleenameplaceholder">Steel sword</string>
    <string name="meleedamageplaceholder">1D12 damage</string>
    <string name="rangednameplaceholder">Longbow</string>
    <string name="rangedrangeplaceholder" translatable="false">100 ft.</string>
    <string name="rangeddamageplaceholder">1D8 Piercing</string>
    <string name="ok" translatable="false">Ok</string>
    <string name="chnameerror">Character\'s name cannot be empty</string>
    <string name="chclasserror">Character\'s class cannot be empty</string>
    <string name="chlverror">Character\'s level cannot be empty</string>
    <string name="characterlabel">Enter your character details</string>
    <string name="nameplaceholder">Character name</string>
    <string name="classplaceholder">Character class</string>
    <string name="lvlplaceholder">Level</string>
    <string name="loadcharacter">Load</string>
    <string name="keeptoremove">Long tap to remove</string>
    <string name="errorattackname">Attack\'s name cannot be empty</string>
    <string name="errorattackdmg">Attack\'s damage cannot be empty</string>
    <string name="errorattackrng">Attack\'s range cannot be empty</string>
    <string name="cancel">Cancel</string>
    <string name="addxpof">Enter how many experience points you gained</string>
    <string name="newlevel">Obtained level %s!</string>
    <string name="migratemsg" translatable="false">Migrating character</string>
    <string name="fileopenerror" translatable="false">An error occurred while opening file</string>
    <string name="newpg">New character</string>
    <string name="delpg">Remove character</string>
    <string name="deleteconfirm">Are you sure?</string>
    <string name="delconfirmpg">Are you sure you want to delete %s?</string>
    <string name="pgdeleteok">Character successfully deleted</string>
    <string name="insertlevelof">Enter the level of </string>
    <string name="insertnameof">Enter new name of </string>
    <string name="insertclassof">Enter new class of </string>
    <string name="insert">Enter </string>
    <string name="insertarmor">Enter AC</string>
    <string name="inserthp">Enter HP</string>
    <string name="insertmaxhp">Enter max HP</string>
    <string name="enterdamage">Enter how many HP you lost</string>
    <string name="entercure">Enter how many HP you gained</string>
    <string name="comp">Prof.</string>
    <string name="mo">gp</string>
    <string name="total">Total</string>
    <string name="pgsgoldpieces">Editing %1$s\'s gold coins</string>
    <string name="pgsplatpieces">Editing %1$s\'s platinum coins</string>
    <string name="pgssilvpieces">Editing %1$s\'s silver coins</string>
    <string name="pgscopppieces">Editing %1$s\'s copper coins</string>
    <string name="addobtninventory">Add an item to the inventory</string>
    <string name="keeppressedtoedit">Long tap to edit</string>
    <string name="editdesc">Edit description</string>
    <string name="edit">Edit</string>
    <string name="atklbl">%s attack with proficiency (1D20 + %s + %s)</string>
    <string name="melee">Melee</string>
    <string name="ranged">Ranged</string>
    <string name="bonusdex">DEX</string>
    <string name="bonusstr">STR</string>
    <string name="damage">Damage</string>
    <string name="range">Range</string>
    <string name="cast">Cast spell</string>
    <string name="level_1">Level 1</string>
    <string name="level_2">Level 2</string>
    <string name="level_3">Level 3</string>
    <string name="level_4">Level 4</string>
    <string name="level_5">Level 5</string>
    <string name="level_6">Level 6</string>
    <string name="level_7">Level 7</string>
    <string name="level_8">Level 8</string>
    <string name="level_9">Level 9</string>
    <string name="level">Level +</string>
    <string name="cantrips">Cantrips</string>
    <string name="spellslabel">Spells</string>
    <string name="scrollformore">Scroll for more →</string>
    <string name="spellbonus">Spell attack bonus</string>
    <string name="cd">Spell Save DC</string>
    <string name="mana_points">Sorcery/Ki/mana points</string>
    <string name="spellcastingability">Spellcasting Ability</string>
    <string name="app_spell" translatable="false">Spells App</string>
    <string name="insertmaxpoints">Enter max points</string>
    <string name="casted">A %s spell has been casted!</string>
    <string name="noslots">No more %s slots left!</string>
    <string name="selectspellstat">Select your spellcasting ability</string>
    <string name="resttxt">Rest! Spell slots and health have been restored!</string>
    <string name="NoNFCsupport">This device does not support NFC</string>
    <string name="NoNFCTag">Please enter your tag</string>
    <string name="WriteErrorNFC">Error during Writing,Try Again!</string>
    <string name="WriteSucksessNFC">Text written succsesfully</string>
    <string name="app_name" translatable="false">rpg_character</string>
    <string name="weaponname">Name</string>
</resources>