<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
        <item
            android:id="@+id/dice"
            android:title="@string/dice"
            android:icon="@drawable/icon_fg"
            app:showAsAction="always" />

        <item
            android:id="@+id/sleep"
            android:title="@string/sleep"
            android:icon="@drawable/sleep"
            app:showAsAction="always" />

        <item
            android:id="@+id/charselect"
            android:title="@string/charselect"
            android:icon="@drawable/charselect"
            app:showAsAction="always" />

        <item
            android:id="@+id/share"
            android:title="@string/export"
            android:icon="@drawable/shareicon"
            app:showAsAction="ifRoom" />
</menu>